# fastlabel

./: .pre-commit-config.yaml  Makefile  example.jsonld  fastlabel.md  pyproject.toml  requirements.txt  test.py
case_artifacts/: observable.ttl.tmp  test.ttl.tmp
case_artifacts/core/: core.ttl
case_artifacts/observable/: observable.ttl
fastlabel/case/: __init__.py  action.py  analysis.py  case.py  configuration.py  core.py  identity.py  investigation.py  location.py  marking.py  observable.py  pattern.py  role.py  time.py  tool.py  types.py  uco.py  victim.py  vocabulary.py
fastlabel/grr/: __init__.py  _base.py  action.py  analysis.py  antivirus.py  applications.py  cloud_services.py  config_files.py  configuration.py  containerd.py  core.py  database_servers.py  docker.py  esxi.py  file_systems.py  hadoop.py  ics.py  identity.py  installed_module_paths.py  installed_modules.py  instant_messaging.py  java.py  kaspersky_careto.py  kubernetes.py  legacy.py  linux.py  linux_proc.py  linux_services.py  location.py  macos.py  marking.py  observable.py  pattern.py  role.py  shell.py  time.py  tomcat.py  tool.py  triage.py  types.py  (+9 more)
fastlabel/kape/: core.py  discovery.py  reporting.py  util.py
fastlabel/kape/modules/: _module.py  accountusage.py  antivirus.py  browsinghistory.py  chainsawsync.py  databases.py  directorylister.py  eventlogs.py  exifdata.py  externaldevices.py  filedeletion.py  filefolderaccess.py  fileknowledge.py  filemetadata.py  filesystem.py  github.py  hollowshunter.py  iislogs.py  iocs.py  kaperesearch.py  kapesync.py  keywordsearches.py  liveresponse.py  memory.py  misc.py  modules.py  passwords.py  powershell.py  powershellhistory.py  programexecution.py  registry.py  remote_access.py  remoteaccess.py  sof_elk.py  sqldatabases.py  srum.py  srumdatabase.py  sum.py  sumdatabase.py  sync.py  (+4 more)
fastlabel/scripts/: __init__.py  _generate_case_draft.py  _util.py  case.py  case_m2.py  case_models.py  example.py  example_case.py  generate_case.py  generate_grr.py  generate_kape.py  gpt_auto.py  grr.py  grr_models.py  test_case.py  test_grr.py  test_kape.py  util.py
fastlabel/uco/: XMLSchema.py  __init__.py  _internal.py  action.py  analysis.py  co.py  configuration.py  core.py  identity.py  location.py  marking.py  observable.py  owl.py  pattern.py  role.py  time.py  tool.py  types.py  victim.py  vocabulary.py
(+56 files in other folders)
