[project]
name = "fastlabel"
version = "0.0.1"
description = "fast disk image labeling"
requires-python = ">=3.11"

dependencies = [
  "pycryptodomex>=3.21.0",
]

[project.optional-dependencies]
# pip install template[dev]
dev = [
  "black",
  "flake8",
  "flake8-bugbear",
  "isort",
  "pre-commit",
  "pytest",
]
# all taken from Pydantic's pyproject.toml
# docs = [
#     "autoflake",
#     "mkdocs",
#     "mkdocs-awesome-pages-plugin",
#     "mkdocs-exclude",
#     "mkdocs-gen-files",
#     "mkdocs-glightbox",
#     "mkdocs-material[imaging]",
#     "mkdocs-redirects",
#     "mkdocstrings-python",
#     "tomli",
#     "pyupgrade",
#     "mike",
#     "requests",
# ]

# [build-system]
# requires = ["setuptools>=73.0"]
# build-backend = "setuptools.build_meta"

# [project.scripts]
# my-client = "my_package.my_module:main_cli"

[tool.setuptools]
packages = ["fastlabel"]

[tool.flake8]
extend_ignore = [
  "E501", # silence "line too long", i don't care lol
  "E203" # silence "whitespace before :"
]

[tool.mypy]
mypy_path = "./fastlabel"
strict_optional = true

[tool.isort]
profile = "black"
